api_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-test-svc
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: api-test
