hello_world_service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: meow-svc-2
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: meow-2
